data/derived/comb/progs/unify/prog1522.ml.out
Characters 16-23:
  let _ = concat ['a','a'];;
                  ^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
